merging with event(fedi omezzine)